--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,11 @@
 plugins {
     id 'java'  // Java 构建支持
     id "io.freefair.lombok" version "8.14"  // Lombok 注解处理
-    id "run.halo.plugin.devtools" version "0.6.1"  // Halo 插件开发工具
+    id "run.halo.plugin.devtools" version "0.6.1" apply false  // Halo 插件开发工具 - 禁用自动应用
 }
+
+// 手动应用 Halo 插件但禁用默认组件索引任务
+apply plugin: "run.halo.plugin.devtools"
 
 group 'top.howiehz.halo.plugin.extra.api'  // Maven 坐标的 groupId
 
@@ -84,6 +87,7 @@ dependencies {
     compileOnly 'org.springframework.data:spring-data-commons'  // Spring Data 通用组件
     compileOnly 'io.projectreactor:reactor-core'         // 响应式编程支持
 
+
     // 测试依赖
     testImplementation 'run.halo.app:api'                // 测试时需要 Halo API 实现
     testImplementation 'org.springframework.boot:spring-boot-starter-test'  // Spring Boot 测试支持
@@ -112,7 +116,6 @@ tasks.withType(JavaCompile).configureEach {
 tasks.register('processUiResources', Copy) {
     from project(':ui').layout.buildDirectory.dir('dist')          // 来源：ui 项目构建输出
     into layout.buildDirectory.dir('resources/main/console')       // 目标：插件控制台资源目录
-    dependsOn project(':ui').tasks.named('assemble')               // 依赖 ui 项目构建
     shouldRunAfter tasks.named('processResources')                 // 在标准资源处理后执行
 }
 
@@ -121,93 +124,194 @@ tasks.register('processShikiResources', Copy) {
     from project(':shiki').layout.buildDirectory.dir('dist')       // 来源：shiki 项目构建输出
     into layout.buildDirectory.dir('resources/main/js')            // 目标：插件 JS 资源目录
     include 'shiki.umd.cjs'                                        // 只包含 Shiki UMD 模块
-    dependsOn project(':shiki').tasks.named('assemble')            // 依赖 shiki 项目构建
     shouldRunAfter tasks.named('processResources')                 // 在标准资源处理后执行
 }
 
-// 完整版本的编译任务依赖 - 确保 UI 和 Shiki 资源在编译完成前就位
-tasks.named('classes') {
-    dependsOn tasks.named('processUiResources')    // UI 资源必须先处理
-    dependsOn tasks.named('processShikiResources') // Shiki 资源必须先处理
+// ========================================================================================
+// 自定义组件索引生成 - 使用 buildSrc 中的任务
+// ========================================================================================
+
+// YAML 版本设置逻辑
+def configurePluginYamlVersion() {
+    return { task ->
+        def pluginYaml = file('src/main/resources/plugin.yaml')
+        if (pluginYaml.exists()) {
+            def yamlContent = pluginYaml.text
+            def versionPattern = /(spec:\s*\n(?:\s+.*\n)*?\s+version:\s*)"[^"]*"/
+            def updatedContent = yamlContent.replaceFirst(versionPattern, '$1"' + project.version + '"')
+            pluginYaml.text = updatedContent
+            logger.info("Updated plugin.yaml version to: ${project.version}")
+        }
+    }
+}
+
+// 在 afterEvaluate 中创建任务，确保 buildSrc 类可用
+def jarLiteIndexTask
+def jarFullAllPlatformsIndexTask
+
+// 统一的 afterEvaluate 块，处理所有延迟配置
+afterEvaluate {
+    // 禁用 Halo 插件自动创建的组件索引任务，使用我们的自定义实现
+    tasks.matching { it.name == 'generatePluginComponentsIdx' }.configureEach {
+        enabled = false
+    }
+    
+    // 配置子项目依赖，确保子项目任务已经完全注册
+    tasks.named('processUiResources') {
+        dependsOn project(':ui').tasks.named('assemble')
+    }
+    tasks.named('processShikiResources') {
+        dependsOn project(':shiki').tasks.named('assemble')
+    }
+    
+    // 配置完整版本的编译任务依赖
+    tasks.named('classes') {
+        dependsOn tasks.named('processUiResources')    // UI 资源必须先处理
+        dependsOn tasks.named('processShikiResources') // Shiki 资源必须先处理
+    }
+    // 导入 buildSrc 中的任务类
+    def MultiJarPluginComponentsIndexTask = top.howiehz.gradle.MultiJarPluginComponentsIndexTask
+    
+    // 为 jarLite 创建组件索引任务 - 只扫描基础类
+    jarLiteIndexTask = tasks.register('generatePluginComponentsIdxJarLite', MultiJarPluginComponentsIndexTask) {
+        group = 'halo server'
+        description = 'Generates plugin components index file for jarLite'
+        
+        classesDirs.from(sourceSets.main.output.classesDirs.filter { dir ->
+            // 只包含基础类，排除 JS 相关功能
+            !dir.toString().contains('js')
+        })
+        jarTaskName.set('jarLite')
+        outputFile.set(layout.buildDirectory.file("tmp/jarLite/META-INF/plugin-components.idx"))
+        
+        doFirst(configurePluginYamlVersion())
+    }
+
+    // 为 jarFullAllPlatforms 创建组件索引任务 - 扫描所有类
+    jarFullAllPlatformsIndexTask = tasks.register('generatePluginComponentsIdxJarFullAllPlatforms', MultiJarPluginComponentsIndexTask) {
+        group = 'halo server'
+        description = 'Generates plugin components index file for jarFullAllPlatforms'
+        
+        classesDirs.from(sourceSets.main.output.classesDirs)
+        jarTaskName.set('jarFullAllPlatforms')
+        outputFile.set(layout.buildDirectory.file("tmp/jarFullAllPlatforms/META-INF/plugin-components.idx"))
+        
+        doFirst(configurePluginYamlVersion())
+    }
+
+    // 为每个平台特定的完整版 JAR 创建组件索引任务
+    platforms.each { variant, platformList ->
+        def taskName = "jarFull${variant}"
+        def indexTaskName = "generatePluginComponentsIdx${taskName.capitalize()}"
+        
+        tasks.register(indexTaskName, MultiJarPluginComponentsIndexTask) {
+            group = 'halo server'
+            description = "Generates plugin components index file for ${taskName}"
+            
+            classesDirs.from(sourceSets.main.output.classesDirs)
+            jarTaskName.set(taskName)
+            outputFile.set(layout.buildDirectory.file("tmp/${taskName}/META-INF/plugin-components.idx"))
+            
+            doFirst(configurePluginYamlVersion())
+        }
+    }
+    
+    // 创建 jarLite 任务
+    tasks.register('jarLite', Jar) {
+        group = 'build'
+        description = 'Assembles a lite jar without JS/Javet dependencies and resources'
+        archiveFileName = 'extra-api-lite-1.0.0-SNAPSHOT.jar'
+        
+        // 包含编译后的 class 文件，但排除 JS 相关功能的类
+        from(sourceSets.main.output.classesDirs) {
+            exclude 'top/howiehz/halo/plugin/extra/api/service/js/**'   // 排除 JS 服务类
+            exclude 'top/howiehz/halo/plugin/extra/api/finder/js/**'    // 排除 JS Finder 类
+        }
+        
+        // 使用标准资源目录确保 plugin.yaml 被正确处理（包含 spec.version），但排除 JS 相关资源
+        from(sourceSets.main.output.resourcesDir) {
+            exclude 'js/**'                              // 排除 JS 资源文件
+            exclude 'extensions/extension-definitions.yaml'  // 排除扩展定义文件（JS 功能需要）
+        }
+        
+        // 包含基础运行时依赖，排除 Javet JavaScript 引擎
+        from configurations.runtimeClasspath.filter { 
+            !it.name.contains('javet')  // 过滤掉所有 javet 相关依赖
+        }.collect { 
+            it.isDirectory() ? it : zipTree(it)  // 展开 JAR 文件内容
+        }
+        
+        duplicatesStrategy = DuplicatesStrategy.EXCLUDE  // 排除重复文件
+        
+        // 任务依赖关系 - 暂时跳过 UI 依赖
+        dependsOn 'compileJava'                                // 依赖 Java 编译
+        dependsOn 'processResources'                           // 依赖标准资源处理
+        dependsOn jarLiteIndexTask                             // 依赖对应的组件索引生成任务
+        
+        // 包含生成的组件索引文件
+        into('META-INF') {
+            from jarLiteIndexTask.get().outputFile
+            rename { 'plugin-components.idx' }
+        }
+    }
+    
+    // 创建 jarFullAllPlatforms 任务
+    tasks.register('jarFullAllPlatforms', Jar) {
+        group = 'build'
+        description = 'Assembles a full jar with all platform dependencies'
+        archiveFileName = 'extra-api-full-all-platforms-1.0.0-SNAPSHOT.jar'
+        
+        from sourceSets.main.output                     // 包含所有编译输出（类和资源）
+        from configurations.javetAllPlatforms.collect { // 包含全平台 Javet 依赖
+            it.isDirectory() ? it : zipTree(it)         // 展开 JAR 文件内容
+        }
+        
+        duplicatesStrategy = DuplicatesStrategy.EXCLUDE  // 排除重复文件
+        dependsOn 'classes'                             // 依赖完整编译（包含 UI 和 Shiki 资源）
+        dependsOn jarFullAllPlatformsIndexTask          // 依赖对应的组件索引生成任务
+        
+        // 包含生成的组件索引文件
+        into('META-INF') {
+            from jarFullAllPlatformsIndexTask.get().outputFile
+            rename { 'plugin-components.idx' }
+        }
+    }
+    
+    // 为每个平台生成特定的完整版 JAR
+    platforms.each { variant, platformList ->
+        def taskName = "jarFull${variant}"
+        def configName = "javet${variant}"
+        def archiveName = "extra-api-full-${variant.toLowerCase()}-1.0.0-SNAPSHOT.jar"
+        def indexTaskName = "generatePluginComponentsIdx${taskName.capitalize()}"
+        
+        tasks.register(taskName, Jar) {
+            group = 'build'
+            description = "Assembles a full jar with ${variant} platform dependencies"
+            archiveFileName = archiveName
+            
+            from sourceSets.main.output                         // 包含所有编译输出
+            from configurations.getByName(configName).collect { // 包含特定平台 Javet 依赖
+                it.isDirectory() ? it : zipTree(it)             // 展开 JAR 文件内容
+            }
+            
+            duplicatesStrategy = DuplicatesStrategy.EXCLUDE  // 排除重复文件
+            dependsOn 'classes'                             // 依赖完整编译
+            dependsOn indexTaskName                         // 依赖对应的组件索引生成任务
+            
+            // 包含生成的组件索引文件
+            into('META-INF') {
+                from tasks.named(indexTaskName).get().outputFile
+                rename { 'plugin-components.idx' }
+            }
+        }
+    }
 }
 
 // ========================================================================================
 // JAR 构建任务
 // ========================================================================================
 
-// jarLite - 轻量版构建，完全排除 JS 功能和 Javet 依赖
-tasks.register('jarLite', Jar) {
-    group = 'build'
-    description = 'Assembles a lite jar without JS/Javet dependencies and resources'
-    archiveFileName = 'extra-api-lite-1.0.0-SNAPSHOT.jar'
-    
-    // 包含编译后的 class 文件，但排除 JS 相关功能的类
-    from(sourceSets.main.output.classesDirs) {
-        exclude 'top/howiehz/halo/plugin/extra/api/service/js/**'   // 排除 JS 服务类
-        exclude 'top/howiehz/halo/plugin/extra/api/finder/js/**'    // 排除 JS Finder 类
-    }
-    
-    // 使用标准资源目录确保 plugin.yaml 被正确处理（包含 spec.version），但排除 JS 相关资源
-    from(sourceSets.main.output.resourcesDir) {
-        exclude 'js/**'                              // 排除 JS 资源文件
-        exclude 'extensions/extension-definitions.yaml'  // 排除扩展定义文件（JS 功能需要）
-    }
-    
-    // 包含基础运行时依赖，排除 Javet JavaScript 引擎
-    from configurations.runtimeClasspath.filter { 
-        !it.name.contains('javet')  // 过滤掉所有 javet 相关依赖
-    }.collect { 
-        it.isDirectory() ? it : zipTree(it)  // 展开 JAR 文件内容
-    }
-    
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE  // 排除重复文件
-    
-    // 任务依赖关系
-    dependsOn 'compileJava'                     // 依赖 Java 编译
-    dependsOn 'processResources'                // 依赖标准资源处理
-    dependsOn 'processUiResources'              // 依赖 UI 资源处理（UI 功能保留）
-    dependsOn 'generatePluginComponentsIdx'     // 依赖插件组件索引生成（处理 plugin.yaml）
-    
-    // 注意：jarLite 不依赖 processShikiResources，因为不包含 JS 功能
-}
-
-// jarFullAllPlatforms - 包含所有平台支持的完整版本
-tasks.register('jarFullAllPlatforms', Jar) {
-    group = 'build'
-    description = 'Assembles a full jar with all platform dependencies'
-    archiveFileName = 'extra-api-full-all-platforms-1.0.0-SNAPSHOT.jar'
-    
-    from sourceSets.main.output                     // 包含所有编译输出（类和资源）
-    from configurations.javetAllPlatforms.collect { // 包含全平台 Javet 依赖
-        it.isDirectory() ? it : zipTree(it)         // 展开 JAR 文件内容
-    }
-    
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE  // 排除重复文件
-    dependsOn 'classes'                             // 依赖完整编译（包含 UI 和 Shiki 资源）
-    dependsOn 'generatePluginComponentsIdx'         // 依赖插件组件索引生成
-}
-
-// 为每个平台生成特定的完整版 JAR
-platforms.each { variant, platformList ->
-    def taskName = "jarFull${variant}"
-    def configName = "javet${variant}"
-    def archiveName = "extra-api-full-${variant.toLowerCase()}-1.0.0-SNAPSHOT.jar"
-    
-    tasks.register(taskName, Jar) {
-        group = 'build'
-        description = "Assembles a full jar with ${variant} platform dependencies"
-        archiveFileName = archiveName
-        
-        from sourceSets.main.output                         // 包含所有编译输出
-        from configurations.getByName(configName).collect { // 包含特定平台 Javet 依赖
-            it.isDirectory() ? it : zipTree(it)             // 展开 JAR 文件内容
-        }
-        
-        duplicatesStrategy = DuplicatesStrategy.EXCLUDE  // 排除重复文件
-        dependsOn 'classes'                             // 依赖完整编译
-        dependsOn 'generatePluginComponentsIdx'         // 依赖插件组件索引生成
-    }
-}
+// 所有 JAR 任务都在 afterEvaluate 块中创建，以确保正确的依赖解析
 
 // ========================================================================================
 // 默认任务配置
